Cherry picked commits from 428a5ead 26/02/2024 to 2d19a472 15/03/2024