@@ -2,8 +2,10 @@ package uk.gov.hmcts.reform.iacasenotificationsapi.domain.service;
 
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.ApplicationContextProvider;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCase;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.ccd.callback.Callback;
@@ -63,7 +65,7 @@ public class EmailNotificationGenerator implements NotificationGenerator {
                 emailNotificationPersonalisation,
                 referenceId,
                 callback)
-            ).toList();
+            ).filter(StringUtils::isNotBlank).collect(Collectors.toList());
     }
 
     protected String sendEmail(
